// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema > embeddingsSchema > has required fields via $columns lookup 1`] = `
[
  "created_at",
  "dimensions",
  "model",
]
`;

exports[`schema > factsSchema > has content, verified, created_at fields 1`] = `
[
  "content",
  "created_at",
  "verified",
]
`;

exports[`schema > memoriesSchema > has all memory fields 1`] = `
[
  "container_tag",
  "content",
  "content_hash",
  "created_at",
  "is_pinned",
  "metadata",
  "tags",
  "tags.*",
  "type",
  "updated_at",
  "vector",
  "vector.*",
]
`;

exports[`schema > messagesSchema > has session record reference 1`] = `
[
  "content",
  "created_at",
  "role",
  "session",
]
`;

exports[`schema > modelSchema > has provider_id and model_id fields 1`] = `
[
  "provider_id",
  "model_id",
  "variant",
  "created_at",
]
`;

exports[`schema > modelSchema > has unique index on provider_id + model_id 1`] = `
[
  {
    "fields": [
      "provider_id",
      "model_id",
    ],
    "name": "idx_models_provider_id_model_id",
    "type": "unique",
  },
]
`;

exports[`schema > projectsSchema > has directory_path and name fields 1`] = `
[
  "created_at",
  "directory_path",
  "name",
]
`;

exports[`schema > projectsSchema > has unique index on directory_path 1`] = `
[
  {
    "fields": [
      "directory_path",
    ],
    "name": "idx_projects_directory_path",
    "type": "unique",
  },
]
`;

exports[`schema > relation tables > hasEmbeddingSchema links embeddings to memories 1`] = `
{
  "in": "embeddings",
  "out": "memories",
}
`;

exports[`schema > relation tables > partOfProjectSchema links projects to memories 1`] = `
{
  "in": "projects",
  "out": "memories",
}
`;

exports[`schema > relation tables > partOfProjectSchema links projects to memories 2`] = `
[
  "type",
]
`;

exports[`schema > relation tables > partOfSessionSchema links sessions to memories 1`] = `
{
  "in": "sessions",
  "out": "memories",
}
`;

exports[`schema > relation tables > partOfSessionSchema links sessions to memories 2`] = `
[
  "type",
]
`;

exports[`schema > relation tables > relatesToSchema links facts to memories 1`] = `
{
  "in": "facts",
  "out": "memories",
}
`;

exports[`schema > relation tables > relatesToSchema links facts to memories 2`] = `
[
  "type",
]
`;

exports[`schema > relation tables > usesModelSchema links sessions to models 1`] = `
{
  "in": "sessions",
  "out": "models",
}
`;

exports[`schema > relation tables > usesModelSchema links sessions to models 2`] = `
[
  "type",
]
`;

exports[`schema > sessionsSchema > has all session fields 1`] = `
[
  "created_at",
  "updated_at",
  "slug",
  "title",
]
`;

exports[`schema > tables defined in schema > defines all 12 tables in orm schema 1`] = `12`;
